@@ -1,5 +1,10 @@
 2001-02-20  Bruno Haible  <haible@clisp.cons.org>
 
+        * src/iconv.c (usage, main): Make -f and -t options optional.
+        * man/iconv.1: Mark them as optional.
+
+2001-02-20  Bruno Haible  <haible@clisp.cons.org>
+
         * tools/Makefile (GB18030ext.TXT, GB18030uni.TXT): Generate from
           glibc-2.2.2 table.
         * lib/gb18030uni.h, lib/gb18030ext.h: Add mapping 0xA989 -> U+303E,
